(workflow): update active CI branches

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: test
 
 on: 
   push:
-    branches: [ master, develop ]
+    branches: [ master, develop, beta, candidate/stable ]
   pull_request:
-    branches: [ master, develop ]
+    branches: [ master, develop, beta, candidate/stable ]
   workflow_dispatch:
 
 env:
