--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,3 +42,8 @@ jobs:
         run: |
           forge test -vvv
         id: test
+      
+      - name: Print compiled non-test contract sizes
+        run: |
+          forge build --skip test --sizes
+        id: build-sizes
